<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
        android:id="@+id/input_email"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="192dp"
        android:hint="@string/email_message"/>
    <EditText
        android:id="@+id/input_password"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/input_email"
        app:layout_constraintStart_toStartOf="@+id/input_email" android:hint="@string/password_message"
    />
    <Button
            android:text="@string/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/input_password" app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/button2" android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"/>
    <Button
            android:text="@string/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            app:layout_constraintBaseline_toBaselineOf="@+id/button" app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp" android:onClick="signUp"/>
</android.support.constraint.ConstraintLayout>